# src/rest/v1/index.ts
@@ -6,12 +6,10 @@ import {
 } from "../../core/facilityManagement";
 import {
   applyToShift,
-  blockWorker,
   createShift,
   listAllShifts,
   listHealthCareFacilityShifts,
   listWorkerShifts,
-  rateWorker,
 } from "../../core/shiftManagement";
 import { createWorker, listWorkers } from "../../core/workerManagement";
 
@@ -59,8 +57,8 @@ v1.post(workersBase, async (req, res) => {
 });
 
 v1.get(`${workersBase}/:uuid/shifts`, async (req, res) => {
-  const shiftAssignments = await listWorkerShifts(req.params.uuid);
-  res.json({ shiftAssignments });
+  const shifts = await listWorkerShifts(req.params.uuid);
+  res.json({ shifts });
 });
 
 v1.post(`${workersBase}/:uuid/shifts`, async (req, res) => {
@@ -76,18 +74,4 @@ const shiftsBase = "/shifts";
 v1.get(shiftsBase, async (req, res) => {
   const shifts = await listAllShifts();
   res.json({ shifts });
-});
-
-// Ratings
-v1.post("/rate-worker", async (req, res) => {
-  const { workerUuid, shiftUuid, rating } = req.body;
-  const shiftAssignment = await rateWorker(workerUuid, shiftUuid, rating);
-  res.json({ shiftAssignment });
-});
-
-// Block workers
-v1.post("/block-worker", async (req, res) => {
-  const { workerUuid, shiftUuid, blockReason } = req.body;
-  const result = await blockWorker(workerUuid, shiftUuid, blockReason);
-  res.json(result);
 });
