# src/rest/v1/openapi.yml
@@ -116,8 +116,6 @@ components:
           type: string
         workerUuid:
           type: string
-        rating:
-          type: number
         shift:
           $ref: '#/components/schemas/Shift'
         worker:
@@ -132,39 +130,6 @@ components:
           type: string
       required:
         - shiftUuid
-    RateWorkerInput:
-      type: object
-      properties:
-        shiftUuid:
-          type: string
-        workerUuid:
-          type: string
-        rating:
-          type: integer
-      required:
-        - shiftUuid
-        - workerUuid
-        - rating
-    BlockWorkerInput:
-      type: object
-      properties:
-        shiftUuid:
-          type: string
-        workerUuid:
-          type: string
-        blockReason:
-          type: string
-      required:
-        - shiftUuid
-        - workerUuid
-        - blockReason
-    GenericSuccessResponse:
-      type: object
-      properties:
-        status:
-          type: string
-      required:
-        - status
 paths:
   /:
     summary: The application health check
@@ -294,7 +259,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  shiftAssignments:
+                  shifts:
                     type: array
                     items:
                       $ref: '#/components/schemas/ShiftAssignment'
@@ -326,31 +291,3 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/Shift'
-  /rate-worker:
-    post:
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/RateWorkerInput'
-      responses:
-        '200':
-          description: Successfully rated a Worker for a Shift
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ShiftAssignment'
-  /block-worker:
-    post:
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/BlockWorkerInput'
-      responses:
-        '200':
-          description: Successfully blocked a Worker from working shifts for a Healthcare facility
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GenericSuccessResponse'
